routes documented with swagger (incomplete)
